# industrial-digital-polygon-simulator-client

./: .gitignore  README.md  pyproject.toml  simulator.proto
examples/: unified_client.py
scripts/: generate_code.py  run_integration_tests.py  smoke_test.py
src/simulation_client/: __init__.py  base_client.py  database_client.py  exceptions.py  models.py  simulation_client.py  unified_client.py  utils.py
src/simulation_client/proto/: __init__.py  simulator_pb2.py  simulator_pb2.pyi  simulator_pb2_grpc.py
