[tool.poetry]
name = "industrial-digital-polygon-simulator-client"
version = "0.1.0"
description = ""
authors = ["Sergey <gerasimovsergey2004@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
grpcio = ">=1.76.0"
grpcio-tools = ">=1.76.0"
pydantic = ">=2.12.5"

[tool.poetry.group.dev.dependencies]
# добавьте сюда dev-зависимости если есть

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"